Initial PHP files with first "real" API call

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/phpstorm
-# Edit at https://www.toptal.com/developers/gitignore?templates=phpstorm
+# Created by https://www.toptal.com/developers/gitignore/api/composer,phpstorm
+# Edit at https://www.toptal.com/developers/gitignore?templates=composer,phpstorm
+
+### Composer ###
+composer.phar
+/vendor/
+
+# Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
+# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
+# composer.lock
 
 ### PhpStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -105,4 +113,4 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
 
-# End of https://www.toptal.com/developers/gitignore/api/phpstorm
+# End of https://www.toptal.com/developers/gitignore/api/composer,phpstorm
