--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
                     username: ${{ secrets.ftp_user }}
                     password: ${{ secrets.ftp_password }}
                     protocol: ftps
-                    local-dir: .
+                    local-dir: ./
                     server-dir: /selfservice-backend.reisishot.pictures/
                     exclude: |
                         **/.git*
