--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,3 +24,4 @@ jobs:
                         README.md
                         config/**
                         mailoutput/**
+                        tailwind/**
