Add more do not publish stuff

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,8 @@ jobs:
                         **/.git*
                         **/.git*/**
                         .*
+                        .idea/**
+                        .github/**
                         README.md
                         config/**
                         mailoutput/**
