Add more do not publish stuff

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,5 +25,6 @@ jobs:
                         .github/**
                         README.md
                         config/**
+                        sql/**
                         mailoutput/**
                         tailwind/**
